fix: overflow-x clip for containers to prevent scrollbars/overflow

--- a/packages/layout/src/scss/_container.scss
+++ b/packages/layout/src/scss/_container.scss
@@ -7,6 +7,7 @@
   padding-right: var(--layout-gap);
   margin-left: auto;
   margin-right: auto;
+  overflow-x: clip;
 }
 
 .uq-container--flex {
